--- a/exercises/flags-css/index.html
+++ b/exercises/flags-css/index.html
@@ -13,5 +13,16 @@
         <div id= french-white></div>
         <div id= french-red></div>
     </div>
+    <div id= german-red>
+        <div id= german-black></div>
+        <div id= german-yellow></div>
+    </div>
+    <div id= madagascar-red>
+        <div id= madagascar-green></div>
+    </div>
+    <div id= swiss-red>
+        <div id= swiss-verticalWhite></div>
+        <div id= swiss-horizontalWhite></div>
+    </div>
 </body>
 </html>
